// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form with one child 1`] = `
.c5 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
}

.c3 {
  border: 0;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  border: 0;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c2 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  border: 0;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-weight: 600;
  color: #262D33;
  margin-right: 0.5rem;
  font-size: 0.875rem;
}

<form>
  <div
    className="c0"
  >
    <label
      className="c1"
    >
      label
    </label>
    <div
      className="c2 c3"
    >
      <div
        className="c4"
      >
        <input
          className="c5"
          name="name"
          type="text"
        />
      </div>
    </div>
  </div>
</form>
`;

exports[`Form with one invalid child and a submit button 1`] = `
.c8 {
  border: 0;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-radius: 0.25rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Open Sans',Helvetica,Arial,sans-serif;
  outline: none;
  -webkit-transition: border 80ms;
  transition: border 80ms;
  vertical-align: middle;
  white-space: nowrap;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  font-size: 1rem;
  line-height: 1.5rem;
  border-style: solid;
  border-width: 0.0625rem;
  background: #64518A;
  border-color: #64518A;
  color: #FFFFFF;
}

.c8:focus {
  box-shadow: 0 0 0 0.15rem rgba(100,81,138,0.25);
}

.c8[disabled] {
  cursor: default;
  -webkit-filter: grayscale(0.3);
  filter: grayscale(0.3);
  opacity: 0.25;
}

.c8[disabled]:hover,
.c8[disabled]:active,
.c8[disabled]:focus {
  background-color: #64518A;
  border-color: #C1C6CC;
}

.c8:hover,
.c8:focus,
.c8.hover {
  background: #473764;
  border-color: #473764;
}

.c8:active,
.c8.active {
  background: #2A1B60;
  border-color: #2A1B60;
}

.c5 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
}

.c6 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
  background-color: #FFF2F4;
}

.c3 {
  border: 0;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  border: 0;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c2 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  border: 0;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-weight: 600;
  color: #262D33;
  margin-right: 0.5rem;
  font-size: 0.875rem;
}

.c7 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
  font-size: 0.75rem;
  color: #B2121F;
}

<form>
  <div
    className="c0"
  >
    <label
      className="c1"
    >
      label1
    </label>
    <div
      className="c2 c3"
    >
      <div
        className="c4"
      >
        <input
          className="c5"
          name="name1"
          type="text"
        />
      </div>
    </div>
  </div>
  <div
    className="c0"
  >
    <label
      className="c1"
    >
      label2
    </label>
    <div
      className="c2 c3"
    >
      <div
        className="c4"
      >
        <input
          className="c6"
          name="name2"
          type="text"
        />
      </div>
      <div
        className="c4"
      >
        <div
          className="c7"
        >
          e2
        </div>
      </div>
    </div>
  </div>
  <button
    className="c8"
  >
    Submit
  </button>
</form>
`;

exports[`Form with two invalid children 1`] = `
.c5 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
  background-color: #FFF2F4;
}

.c3 {
  border: 0;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  border: 0;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c2 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  border: 0;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-weight: 600;
  color: #262D33;
  margin-right: 0.5rem;
  font-size: 0.875rem;
}

.c6 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
  font-size: 0.75rem;
  color: #B2121F;
}

<form>
  <div
    className="c0"
  >
    <label
      className="c1"
    >
      label1
    </label>
    <div
      className="c2 c3"
    >
      <div
        className="c4"
      >
        <input
          className="c5"
          name="name1"
          type="text"
        />
      </div>
      <div
        className="c4"
      >
        <div
          className="c6"
        >
          e1
        </div>
      </div>
    </div>
  </div>
  <div
    className="c0"
  >
    <label
      className="c1"
    >
      label2
    </label>
    <div
      className="c2 c3"
    >
      <div
        className="c4"
      >
        <input
          className="c5"
          name="name2"
          type="text"
        />
      </div>
      <div
        className="c4"
      >
        <div
          className="c6"
        >
          e2
        </div>
      </div>
    </div>
  </div>
</form>
`;
